[package]
name = "jismesh"
description = "Utilities for handling and converting JIS X0410 area mesh codes."
version = "0.1.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/KotobaMedia/jismesh"
repository = "https://github.com/KotobaMedia/jismesh"
authors = ["Keita Kobayashi <keita@kotobamedia.com>"]

[dependencies]
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2"

[dev-dependencies]
approx = "0.5.1"
